--- a/compiz/compiz/compizconfig/Default.ini
+++ b/compiz/compiz/compizconfig/Default.ini
@@ -1,5 +1,5 @@
 [core]
-as_active_plugins = core;colorfilter;vpswitch;extrawm;obs;svg;text;dbus;imgjpeg;cube;showdesktop;ring;annotate;screenshot;notification;move;regex;png;3d;trailfocus;mousepoll;snap;resize;animation;wallpaper;scale;rotate;scaleaddon;ezoom;mag;animationaddon;cubeaddon;scalefilter;bench;
+as_active_plugins = core;colorfilter;vpswitch;extrawm;obs;svg;text;dbus;imgjpeg;cube;showdesktop;ring;annotate;screenshot;notification;move;regex;png;glib;3d;trailfocus;mousepoll;snap;resize;animation;wallpaper;scale;rotate;scaleaddon;ezoom;mag;animationaddon;cubeaddon;scalefilter;bench;
 s0_outputs = 1366x768+0+0;
 s0_refresh_rate = 70
 as_maximize_window_horizontally_key = <Shift><Alt>F10
@@ -148,4 +148,13 @@ as_prev_all_key = <Shift><Alt>Tab
 
 [ezoom]
 as_zoom_box_button = Disabled
+
+[annotate]
+as_erase_button = Disabled
+as_initiate_rectangle_button = <Alt><Super>Button3
+as_initiate_ellipse_button = <Shift><Alt><Super>Button3
+as_initiate_line_button = <Shift><Alt><Super>Button1
+as_stroke_width = 4.000000
+as_stroke_color = #ff0000ff
+as_fill_color = #ff000000
 
