--- a/udev/Makefile
+++ b/udev/Makefile
@@ -1,3 +1,7 @@
-install:
-	install -m 644 *.rules -t /etc/udev/rules.d/
+install-android:
+	install -m 644 51-android.rules -t /etc/udev/rules.d/
+	udevadm control --reload
+
+install-hide-partition:
+	install -m 644 90-hide-partitions.rules -t /etc/udev/rules.d/
 	udevadm control --reload
