--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,7 +5,7 @@ set-option -g default-shell /bin/zsh
 set -g mouse on
 
 # reload the tmux config
-bind r source-file ~/.tmux.conf \; display "!! config file reloaded... :D"
+bind r source-file ~/.tmux.conf \; display "!! config file reloaded Sir...  😸"
 
 # binding the yet another awesome thing:
 # learnt on ruby_meet2016,jun17 from oozzal
@@ -22,6 +22,9 @@ set -g history-limit 1000000
 bind -t emacs-copy WheelUpPane   page-up
 bind -t emacs-copy WheelDownPane page-down
 
+#scrolling
+bind-key -t emacs-copy M-w copy-pipe "xsel -i -p -b"
+bind-key C-y run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 #-----------from book--------------
 # new config
 # set the status line's colors
@@ -34,9 +37,10 @@ setw -g window-status-bg default
 setw -g window-status-attr dim
 
 # set colors for the active window
-setw -g window-status-current-fg white
-setw -g window-status-current-bg black
+setw -g window-status-current-fg black
+setw -g window-status-current-bg cyan
 setw -g window-status-current-attr bright
+
 
 # pane colors
 #set -g pane-border-fg green
@@ -85,8 +89,9 @@ set -g status-interval 60
 
 # shortcuts rule the world
 bind-key "~" split-window "exec htop"
+bind-key "@" split-window "exec dmesg -w"
 
 # notification, alerting the states
 setw -g monitor-activity on
 set -g visual-activity on
-setw -g automatic-rename
+# setw automatic-rename off
